--- a/index.html
+++ b/index.html
@@ -62,22 +62,22 @@
         <h2>Наша команда</h2>
         <ul>
             <li>
-                <img src="./images/4" alt="Фотография Игоря" width="270" />
+                <img src="./images/img4.jpg" alt="Фотография Игоря" width="270" />
                 <h3>Игорь Демьяненко</h3>
                 <p>Product Designer</p>
             </li>
             <li>
-                <img src="./images/5" alt="Фотография Ольги" width="270" />
+                <img src="./images/img5.jpg" alt="Фотография Ольги" width="270" />
                 <h3>Ольга Репина</h3>
                 <p>Frontend Developer</p>
             </li>
             <li>
-                <img src="./images/6" alt="Фотография Николая" width="270" />
+                <img src="./images/img6.jpg" alt="Фотография Николая" width="270" />
                 <h3>Николай Тарасов</h3>
                 <p>Marketing</p>
             </li>
             <li>
-                <img src="./images/7.jpg" alt="Фотография Михаила" width="270" />
+                <img src="./images/img7.jpg" alt="Фотография Михаила" width="270" />
                 <h3>Михаил Ермаков</h3>
                 <p>UI Designer</p>
             </li>
