--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <button type="button">Заказать услугу</button>
     </section>
     <section>
+        <h2>Особенности</h2>
         <ul>
             <li>
                 <h3>Внимание к деталям</h3>
@@ -45,6 +46,8 @@
                 <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
         </ul>
+    </section>
+    <section>
         <h2>Чем мы занимаемся</h2>
         <ul>
             <li>
@@ -64,22 +67,22 @@
             <li>
                 <img src="./images/img4.jpg" alt="Фотография Игоря" width="270" />
                 <h3>Игорь Демьяненко</h3>
-                <p>Product Designer</p>
+                <p lang="en">Product Designer</p>
             </li>
             <li>
                 <img src="./images/img5.jpg" alt="Фотография Ольги" width="270" />
                 <h3>Ольга Репина</h3>
-                <p>Frontend Developer</p>
+                <p lang="en">Frontend Developer</p>
             </li>
             <li>
                 <img src="./images/img6.jpg" alt="Фотография Николая" width="270" />
                 <h3>Николай Тарасов</h3>
-                <p>Marketing</p>
+                <p lang="en">Marketing</p>
             </li>
             <li>
                 <img src="./images/img7.jpg" alt="Фотография Михаила" width="270" />
                 <h3>Михаил Ермаков</h3>
-                <p>UI Designer</p>
+                <p lang="en">UI Designer</p>
             </li>
         </ul>
     </section>
@@ -88,9 +91,11 @@
 <footer>
 <a href="">WebStudio</a>
 <address>
-    г. Киев, пр-т Леси Украинки, 26 <br />
-    <a href="mailto:info@example.com">info@example.com</a><br />
-    <a href="tel:+380991111111">+38 099 111 11 11</a>
+    <ul>
+    <li><a href="">г. Киев, пр-т Леси Украинки, 26</a></li>
+    <li><a href="mailto:info@example.com">info@example.com</a></li>
+    <li><a href="tel:+380991111111">+38 099 111 11 11</a>0</li>
+    </ul>
 </address>
 </footer>  
 </body>
